@@ -12,15 +12,17 @@ public class Buscar extends javax.swing.JFrame {
     private Curso curso;
     private String titulo;
     private String label;
+    private boolean opcion;
     //buscar curso
     public Buscar(Colegio colegio) {
         this.colegio = colegio;
         initComponents();
     }
     //buscar estudiantes
-    public Buscar(Colegio colegio,Curso curso){
+    public Buscar(Colegio colegio,Curso curso,boolean opcion){
         this.colegio = colegio;
         this.curso = curso;
+        this.opcion = opcion;
         initComponents();
         this.remove(jTextFieldLetra);
         this.remove(jLabel3);
@@ -159,8 +161,13 @@ public class Buscar extends javax.swing.JFrame {
     
     
     private void opcionBuscar(){
-        if(curso==null){
-                if (jTextFieldPrin.getText().isBlank()||jTextFieldLetra.getText().isBlank()){
+        if (jTextFieldPrin.getText().trim().isEmpty()){
+            JOptionPane.showMessageDialog(this, "Debe de completar todas las casillas", "Advertencia", JOptionPane.WARNING_MESSAGE);
+         }
+        else{
+            if(curso==null){
+                //las dos casillas de buscar curso deben de estar con texto
+                if (jTextFieldPrin.getText().trim().isEmpty() || jTextFieldLetra.getText().trim().isEmpty()){
                     JOptionPane.showMessageDialog(this, "Debe de completar todas las casillas", "Advertencia", JOptionPane.WARNING_MESSAGE);
                 }
                 else{
@@ -170,26 +177,23 @@ public class Buscar extends javax.swing.JFrame {
                         JOptionPane.showMessageDialog(this, "Curso no se encuentra en el sistema", "No existe", JOptionPane.INFORMATION_MESSAGE);
                     }
                     else{
-                        //mostrarCurso
-                        
+                        //mostrarCurso   
                         JOptionPane.showMessageDialog(this,(colegio.mostrarCurso(c)),"Encontrado", JOptionPane.INFORMATION_MESSAGE);
                         MenuCursos vv = new MenuCursos(colegio);
                         vv.setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
                         vv.setExtendedState(JFrame.MAXIMIZED_BOTH);
                         vv.setVisible(true);
-                        this.dispose();
+                        this.dispose();        
                     }
-                }
+                }    
             }
             else{
-                if (jTextFieldPrin.getText().isBlank()){
-                    JOptionPane.showMessageDialog(this, "Debe de completar todas las casillas", "Advertencia", JOptionPane.WARNING_MESSAGE);
-                }
-                else{
-                    if(curso.contieneEstudiante(jTextFieldPrin.getText())){
-                        Estudiante e;
-                        e = curso.getEstudiante(jTextFieldPrin.getText());
-                        JOptionPane.showMessageDialog(this,e.toString()+"\nEstudiante Encontrado","Encontrado", JOptionPane.INFORMATION_MESSAGE);
+                Estudiante e;
+                jTextFieldPrin.setText(curso.verificarRut(jTextFieldPrin.getText()));
+                if(curso.contieneEstudiante(jTextFieldPrin.getText())){
+                    e = curso.getEstudiante(jTextFieldPrin.getText());
+                    JOptionPane.showMessageDialog(this,"RUT: "+e.getRut()+"\nNombre: "+e.getNombre()+"\nApellido: "+e.getApellido()+"\nEstudiante Encontrado","Encontrado", JOptionPane.INFORMATION_MESSAGE);
+                    if(opcion){
                         MenuEstudiantes vv = new MenuEstudiantes(colegio,curso);
                         vv.setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
                         vv.setExtendedState(JFrame.MAXIMIZED_BOTH);
@@ -197,11 +201,20 @@ public class Buscar extends javax.swing.JFrame {
                         this.dispose();
                     }
                     else{
-                        JOptionPane.showMessageDialog(this, "Estudiante no se encuentra en el sistema", "No existe", JOptionPane.INFORMATION_MESSAGE);
+                        //modificar
+                        Modificar vv = new  Modificar(colegio,curso,e);
+                        vv.setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
+                        vv.setExtendedState(JFrame.MAXIMIZED_BOTH);
+                        vv.setVisible(true);
+                        this.dispose();
                     }
-                }
-            }
-        
+                        
+               }
+               else{
+                    JOptionPane.showMessageDialog(this, "Estudiante no se encuentra en el sistema", "No existe", JOptionPane.INFORMATION_MESSAGE);
+              }
+            }   
+        }
     }
     
     private void jButtonBuscarActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButtonBuscarActionPerformed
